--- a/index.html
+++ b/index.html
@@ -6,28 +6,19 @@
 <title>12 Bubbles</title>
 <style>
 html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: monospace; background-color:#0a0a0a; color:#fff; }
-
 /* --- LOADING SCREEN --- */
-#loadingScreen {
-  position: fixed; top:0; left:0; width:100%; height:100%;
-  background:#000; display:flex; justify-content:center; align-items:center;
-  color:#fff; font-size:50px; font-weight:bold; z-index:3000;
-  text-align:center; animation:eyeGlow 2s ease-in-out forwards;
-}
+#loadingScreen { position: fixed; top:0; left:0; width:100%; height:100%; background:#000; display:flex; justify-content:center; align-items:center; color:#fff; font-size:50px; font-weight:bold; z-index:3000; text-align:center; animation:eyeGlow 2s ease-in-out forwards;}
 @keyframes eyeGlow { 0% { opacity:0.2; text-shadow:none; } 50% { opacity:1; text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff; } 100% { opacity:0.2; text-shadow:none; } }
-
 /* --- HOME SCREEN --- */
 #startBtn, #indexBtn { display:none; margin:0 auto; font-size:28px; padding:15px 35px; background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); border:none; border-radius:12px; color:#fff; font-weight:bold; text-transform:uppercase; cursor:pointer; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; z-index:1000; }
 #startBtn { margin-top:30vh; }
 #indexBtn { margin-top:20px; }
-
 /* --- Countdown & Score --- */
 #countdown { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); font-size:80px; color:#d166ff; text-shadow:0 0 20px #d166ff,0 0 40px #a044ff; z-index:1001; display:none; }
 #scoreContainer { position:fixed; top:20px; left:50%; transform:translateX(-50%); z-index:1001; text-align:center; display:none; }
 #highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
 #score { font-size:28px; color:#d166ff; }
 #lives { font-size:20px; color:#f00; margin-top:5px; }
-
 /* --- Bubbles --- */
 .bubble { width:80px; height:80px; border-radius:50%; display:flex; justify-content:center; align-items:center; font-size:24px; font-weight:bold; color:#fff; background:linear-gradient(135deg,#a044ff,#6a00f4); border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset; position:absolute; cursor:pointer; }
 .bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:28px; }
@@ -36,7 +27,6 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 .bubble.gravity { background: linear-gradient(135deg,#fff,#d166ff); color:#000; font-size:28px; }
 .bubble.invert { background: linear-gradient(135deg,#fff,#000); color:#0ff; font-size:26px; }
 .bubble.instawin { background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; font-size:32px; box-shadow:0 0 30px #ff0, 0 0 60px #f00; }
-
 /* --- Index Panel --- */
 #indexPanel { position:fixed; top:100%; left:0; width:100%; max-height:70%; background:rgba(10,10,10,0.95); overflow-y:auto; transition:top 0.5s ease; padding:20px; z-index:999; box-shadow:0 -5px 30px #d166ff; }
 #indexPanel h2 { text-transform:uppercase; }
@@ -46,18 +36,14 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 .indexItem .desc { flex:1; }
 .indexItem .rarity { font-weight:bold; }
 @keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
-
 /* --- End Screen --- */
 #endScreen { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); display:none; flex-direction:column; justify-content:center; align-items:center; color:#fff; font-size:40px; z-index:1500; text-align:center; }
 #continueBtn { margin-top:30px; font-size:26px; padding:15px 40px; border:none; border-radius:10px; cursor:pointer; color:#fff; background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
-
 /* --- Version --- */
 #versionLabel { position:fixed; top:10px; right:10px; font-size:16px; color:rgba(255,255,255,0.3); font-weight:bold; z-index:1002; pointer-events:none; }
-
 /* --- Easter Egg --- */
 #easterEgg { position: fixed; top: 0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); color:red; font-size:150px; font-weight:bold; display:flex; justify-content:center; align-items:center; z-index:2000; display:none; text-transform:uppercase; opacity:0; animation:fadeShake 5s forwards; }
 @keyframes fadeShake { 0%{opacity:0; transform:translateX(0);} 10%{opacity:1; transform:translateX(-5px);} 20%{transform:translateX(5px);} 30%{transform:translateX(-5px);} 40%{transform:translateX(5px);} 50%{transform:translateX(-5px);} 60%{transform:translateX(5px);} 70%{transform:translateX(-5px);} 80%{transform:translateX(5px);} 90%{transform:translateX(-5px);} 100%{opacity:0; transform:translateX(0);} }
-
 /* --- PAUSE SCREEN --- */
 #pauseScreen { position: fixed; top: 0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.85); color:#fff; display: none; flex-direction: column; justify-content: center; align-items: center; z-index:2000; text-align:center; opacity:0; animation-fill-mode: forwards; }
 #pauseScreen.fadeIn { animation: fadeIn 0.5s forwards; }
@@ -66,7 +52,6 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 @keyframes fadeOut { 0% { opacity:1; transform:scale(1);} 100%{ opacity:0; transform:scale(0.9);} }
 #pauseText { font-size:60px; font-weight:bold; margin-bottom:30px; }
 #continueGameBtn, #endGameBtn { font-size:28px; padding:15px 40px; margin:10px; border:none; border-radius:10px; cursor:pointer; color:#fff; background:linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
-
 /* --- PAUSE BUTTON --- */
 #pauseBtn { position: fixed; top:10px; left:10px; font-size:28px; padding:10px 18px; border:none; border-radius:8px; background: linear-gradient(45deg,#a044ff,#6a00f4); color:#fff; cursor:pointer; z-index:1001; display:none; }
 </style>
@@ -74,7 +59,6 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 <body>
 
 <div id="loadingScreen">Level 12 studio</div>
-
 <div id="versionLabel">Released 1.2.3</div>
 <button id="startBtn">START</button>
 <button id="indexBtn">INDEX</button>
@@ -98,23 +82,25 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
   <div id="lives">Životy: 3</div>
 </div>
 
+<div id="pauseBtn">|  |</div>
+
+<div id="pauseScreen">
+  <div id="pauseText">PAUZA</div>
+  <button id="continueGameBtn">Pokračovat</button>
+  <button id="endGameBtn">Konec</button>
+</div>
+
 <div id="endScreen">
   <div id="finalScoreText"></div>
   <button id="continueBtn">POKRAČOVAT</button>
 </div>
 
-<div id="pauseScreen">
-  <div id="pauseText">PAUZA</div>
-  <button id="continueGameBtn">POKRAČOVAT</button>
-  <button id="endGameBtn">KONEC</button>
-</div>
-
-<button id="pauseBtn">|  |</button>
 <div id="easterEgg"></div>
 
 <audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
 
 <script>
+// --- ELEMENTS ---
 const startBtn=document.getElementById('startBtn');
 const indexBtn=document.getElementById('indexBtn');
 const indexPanel=document.getElementById('indexPanel');
@@ -132,12 +118,12 @@ const easterEl=document.getElementById('easterEgg');
 const closeBtn=document.querySelector('#indexPanel .closeBtn');
 const loadingScreen=document.getElementById('loadingScreen');
 
-const pauseScreen=document.getElementById('pauseScreen');
 const pauseBtn=document.getElementById('pauseBtn');
+const pauseScreen=document.getElementById('pauseScreen');
 const continueGameBtn=document.getElementById('continueGameBtn');
 const endGameBtn=document.getElementById('endGameBtn');
 
-let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime, gamePaused=false;
+let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, gamePaused=false, startTime;
 
 // --- LOADING SCREEN ---
 window.addEventListener('load',()=>{
@@ -154,45 +140,20 @@ function attachButtonEvents(){
   startBtn.addEventListener('click',startCountdown);
   indexBtn.addEventListener('click',(e)=>{
     e.stopPropagation();
-    if(indexPanel.style.top==='30%'){
-      indexPanel.style.top='100%';
-      startBtn.style.display='block';
-      indexBtn.style.display='block';
-    } else {
-      indexPanel.style.top='30%';
-      startBtn.style.display='none';
-      indexBtn.style.display='none';
-    }
+    if(indexPanel.style.top==='30%'){ indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; }
+    else { indexPanel.style.top='30%'; startBtn.style.display='none'; indexBtn.style.display='none'; }
   });
-  closeBtn.addEventListener('click',(e)=>{
-    e.stopPropagation();
-    indexPanel.style.top='100%';
-    startBtn.style.display='block';
-    indexBtn.style.display='block';
-  });
+  closeBtn.addEventListener('click',(e)=>{ e.stopPropagation(); indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; });
   indexPanel.addEventListener('click',e=>e.stopPropagation());
   document.body.addEventListener('click',()=>{
-    if(indexPanel.style.top==='30%'){
-      indexPanel.style.top='100%';
-      startBtn.style.display='block';
-      indexBtn.style.display='block';
-    }
+    if(indexPanel.style.top==='30%'){ indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; }
   });
   continueBtn.addEventListener('click',()=>{
-    endScreen.style.display='none';
-    startBtn.style.display='block';
-    indexBtn.style.display='block';
-    versionLabel.style.display='block';
+    endScreen.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block'; versionLabel.style.display='block';
   });
-
   pauseBtn.addEventListener('click', togglePause);
-  continueGameBtn.addEventListener('click', ()=>{ gamePaused=false; togglePause(); });
-  endGameBtn.addEventListener('click', ()=>{
-    gamePaused=false;
-    pauseScreen.classList.remove('fadeIn');
-    pauseScreen.classList.add('fadeOut');
-    setTimeout(()=>{ pauseScreen.style.display='none'; endGame(); },500);
-  });
+  continueGameBtn.addEventListener('click', togglePause);
+  endGameBtn.addEventListener('click', endGame);
 }
 
 // --- Countdown ---
@@ -210,6 +171,7 @@ function startCountdown(){
       clearInterval(interval);
       countdownEl.style.display='none';
       scoreContainer.style.display='block';
+      pauseBtn.style.display='block';
       startGame();
     }
   },1000);
@@ -217,9 +179,8 @@ function startCountdown(){
 
 // --- GAME LOGIC ---
 function startGame(){
-  score=0; lives=3; bubbles=[]; gameRunning=true; startTime=Date.now();
+  score=0; lives=3; bubbles=[]; gameRunning=true; gamePaused=false; startTime=Date.now();
   scoreEl.textContent="Skóre: "+score; livesEl.textContent="Životy: "+lives;
-  pauseBtn.style.display='block';
   spawnBubble();
   requestAnimationFrame(updateBubbles);
 }
@@ -228,25 +189,32 @@ function togglePause(){
   if(!gameRunning) return;
   gamePaused = !gamePaused;
   if(gamePaused){
-    pauseScreen.classList.remove('fadeOut');
-    pauseScreen.classList.add('fadeIn');
-    pauseScreen.style.display='flex';
-  } else {
-    pauseScreen.classList.remove('fadeIn');
-    pauseScreen.classList.add('fadeOut');
-    setTimeout(()=> pauseScreen.style.display='none',500);
-    requestAnimationFrame(updateBubbles);
+    pauseScreen.classList.remove('fadeOut'); pauseScreen.classList.add('fadeIn'); pauseScreen.style.display='flex';
+  } else{
+    pauseScreen.classList.remove('fadeIn'); pauseScreen.classList.add('fadeOut'); setTimeout(()=> pauseScreen.style.display='none',500);
   }
 }
 
-function spawnBubble(){
-  if(!gameRunning || gamePaused) return;
-  const elapsed=(Date.now()-startTime)/1000;
-  const speedMultiplier=1+elapsed/120;
-  const chance=Math.random();
-  const bubble=document.createElement('div');
-  bubble.classList.add('bubble');
+function updateBubbles(){
+  if(!gameRunning) return;
+  if(!gamePaused){
+    bubbles.forEach(bubble=>{
+      const top=parseFloat(bubble.style.top);
+      bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
+      if(top<=0){  
+        lives--; livesEl.textContent="Životy: "+lives;  
+        bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);  
+        if(lives<=0) endGame();
+      }
+    });
+  }
+  requestAnimationFrame(updateBubbles);
+}
 
+// --- Spawn Bubble Functions ---
+function spawnBubble(){ if(!gameRunning || gamePaused) { setTimeout(spawnBubble,500); return; }
+  const elapsed=(Date.now()-startTime)/1000; const speedMultiplier=1+elapsed/120; const chance=Math.random();
+  const bubble=document.createElement('div'); bubble.classList.add('bubble');
   if(chance<=0.001){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; }
   else if(chance<=0.016){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
   else if(chance<=0.0185){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
@@ -255,9 +223,7 @@ function spawnBubble(){
   else if(chance<=0.0785){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
   else { bubble.textContent="12"; bubble.dataset.type="normal"; }
 
-  const size=Math.random()*60+60;
-  bubble.style.width=size+'px';
-  bubble.style.height=size+'px';
+  const size=Math.random()*60+60; bubble.style.width=size+'px'; bubble.style.height=size+'px';
   bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
   bubble.style.top=(window.innerHeight-size)+'px';
@@ -267,8 +233,7 @@ function spawnBubble(){
   const pop=()=>{
     if(!gameRunning) return;
     if(['2x','144','triple','gravity','invert','instawin'].includes(bubble.dataset.type)) popSound.currentTime=0, popSound.play();
-    bubble.remove();
-    bubbles=bubbles.filter(b=>b!==bubble);
+    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
 
     if(bubble.dataset.type==="2x") score*=2;
     else if(bubble.dataset.type==="144") score+=144;
@@ -278,12 +243,8 @@ function spawnBubble(){
       const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
       bubbles.forEach(b=>{ b.style.left=(bx-parseFloat(b.style.width)/2)+'px'; b.style.top=(by-parseFloat(b.style.height)/2)+'px'; });
     }
-    else if(bubble.dataset.type==="invert"){
-      document.body.style.filter = 'invert(1)';
-      score += 10;
-      setTimeout(()=>document.body.style.filter='',5000);
-    }
-    else if(bubble.dataset.type==="instawin"){ score += 999999999; }
+    else if(bubble.dataset.type==="invert"){ document.body.style.filter='invert(1)'; score+=10; setTimeout(()=>document.body.style.filter='',5000); }
+    else if(bubble.dataset.type==="instawin"){ score+=999999999; }
     else score++;
 
     if(score>999999999) score=999999999;
@@ -291,69 +252,35 @@ function spawnBubble(){
     if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }
   };
 
-  bubble.addEventListener('click',pop);
-  bubble.addEventListener('touchstart',pop);
+  bubble.addEventListener('click',pop); bubble.addEventListener('touchstart',pop);
   bubbles.push(bubble);
   setTimeout(spawnBubble,500);
 }
 
-function spawnSingleBubble(){
-  if(!gameRunning || gamePaused) return;
-  const elapsed=(Date.now()-startTime)/1000;
-  const speedMultiplier=1+elapsed/120;
+function spawnSingleBubble(){ if(!gameRunning || gamePaused) return;
+  const elapsed=(Date.now()-startTime)/1000; const speedMultiplier=1+elapsed/120;
   const bubble=document.createElement('div'); bubble.classList.add('bubble');
   bubble.textContent="12"; bubble.dataset.type="normal";
-  const size=Math.random()*60+60;
-  bubble.style.width=size+'px';
-  bubble.style.height=size+'px';
+  const size=Math.random()*60+60; bubble.style.width=size+'px'; bubble.style.height=size+'px';
   bubble.style.fontSize=size/3+'px';
   bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
   bubble.style.top=(window.innerHeight-size)+'px';
   bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
   document.body.appendChild(bubble);
 
-  const pop=()=>{  
-    if(!gameRunning) return; score++;  
-    if(score>999999999) score=999999999; scoreEl.textContent="Skóre: "+score;  
-    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }  
-    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
-  };
+  const pop=()=>{ if(!gameRunning) return; score++; if(score>999999999) score=999999999; scoreEl.textContent="Skóre: "+score; if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; } bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);}
   bubble.addEventListener('click',pop); bubble.addEventListener('touchstart',pop);
   bubbles.push(bubble);
 }
 
-function updateBubbles(){
-  if(!gameRunning || gamePaused) return;
-  bubbles.forEach(bubble=>{
-    const top=parseFloat(bubble.style.top);
-    bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
-    if(top<=0){  
-      lives--; livesEl.textContent="Životy: "+lives;  
-      bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);  
-      if(lives<=0) endGame();
-    }
-  });
-  requestAnimationFrame(updateBubbles);
-}
-
 function endGame(){
   gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
-  scoreContainer.style.display='none';
-  pauseBtn.style.display='none';
-  if(score===12 || score<=3){
-    easterEl.textContent = (score===12?'12':'BRUH');
-    easterEl.style.display='flex';
-    easterEl.style.animation='fadeShake 5s forwards';
-    setTimeout(()=>{ easterEl.style.display='none'; showEndScreen(); },5000);
-  } else {
-    showEndScreen();
-  }
+  scoreContainer.style.display='none'; pauseBtn.style.display='none'; pauseScreen.style.display='none';
+  if(score===12 || score<=3){ easterEl.textContent=(score===12?'12':'BRUH'); easterEl.style.display='flex'; easterEl.style.animation='fadeShake 5s forwards'; setTimeout(()=>{ easterEl.style.display='none'; showEndScreen(); },5000);}
+  else showEndScreen();
 }
 
-function showEndScreen(){
-  finalScoreText.textContent="Tvé skóre: "+score;
-  endScreen.style.display='flex';
-}
+function showEndScreen(){ finalScoreText.textContent="Tvé skóre: "+score; endScreen.style.display='flex'; }
 </script>
 </body>
 </html>
