--- a/index.html
+++ b/index.html
@@ -5,32 +5,68 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>12 Bubbles</title>
 <style>
-html, body { margin:0; padding:0; height:100%; font-family: monospace; background:#0a0a0a; color:#fff; overflow:hidden; display:flex; justify-content:center; align-items:center; }
-/* Loading */
-#loadingScreen { position:fixed;top:0;left:0;width:100%;height:100%; background:#000; display:flex; justify-content:center; align-items:center; font-size:50px; font-weight:bold; z-index:3000; text-align:center; animation:eyeGlow 2s ease-in-out forwards; }
-@keyframes eyeGlow {0% {opacity:0.2;}50%{opacity:1;text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff;}100%{opacity:0.2;}}
+html, body {
+  margin:0; padding:0; height:100vh; overflow:hidden;
+  font-family: monospace; background-color:#0a0a0a; color:#fff;
+  display:flex; justify-content:center; align-items:center;
+}
 
-/* Buttons */
-button { font-family: monospace; font-weight:bold; border:none; border-radius:12px; cursor:pointer; color:#fff; text-transform:uppercase; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; background:linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); }
-#startBtn, #indexBtn, #difficultyMenu button, #backBtn, #continueBtn, #continueGameBtn, #endGameBtn { font-size:32px; padding:15px 35px; margin:10px auto; display:block; }
-#difficultyMenu { display:none; flex-direction:column; gap:15px; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); z-index:1001; text-align:center; }
+/* --- LOADING SCREEN --- */
+#loadingScreen {
+  position: fixed; top:0; left:0; width:100%; height:100%;
+  background:#000; display:flex; justify-content:center; align-items:center;
+  color:#fff; font-size:50px; font-weight:bold; z-index:3000;
+  text-align:center; animation:eyeGlow 2s ease-in-out forwards;
+}
+@keyframes eyeGlow {
+  0% { opacity:0.2; text-shadow:none; }
+  50% { opacity:1; text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff; }
+  100% { opacity:0.2; text-shadow:none; }
+}
 
-/* Index */
-#indexPanel { position:fixed; top:100%; left:50%; transform:translateX(-50%); width:90%; max-height:70%; background:rgba(10,10,10,0.95); overflow-y:auto; transition:top 0.5s ease; padding:20px; z-index:999; box-shadow:0 -5px 30px #d166ff; border-radius:15px; }
-#indexPanel h2 { text-transform:uppercase; font-size:28px; margin-bottom:10px; text-align:center; }
-#indexPanel .closeBtn { position:absolute; top:10px; right:10px; font-size:28px; cursor:pointer; font-weight:bold; color:#fff; z-index:1001; }
-.indexItem { display:flex; align-items:center; margin:10px 0; font-size:20px; justify-content:flex-start; }
-.indexItem .bubbleImg { width:60px; height:60px; margin-right:15px; border-radius:50%; display:flex; justify-content:center; align-items:center; font-weight:bold; color:#fff; border:2px solid #d166ff; box-shadow:0 0 15px #d166ff inset; }
+/* --- HOME SCREEN --- */
+#startBtn, #indexBtn {
+  display:none; margin:0 auto; font-size:32px; padding:15px 40px;
+  background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
+  border:none; border-radius:12px; color:#fff; font-weight:bold;
+  text-transform:uppercase; cursor:pointer; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
+}
+#startBtn { margin-top:20vh; }
+#indexBtn { margin-top:20px; }
 
-/* Game UI */
-#countdown { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); font-size:100px; color:#d166ff; text-shadow:0 0 20px #d166ff,0 0 40px #a044ff; display:none; z-index:1001; }
-#scoreContainer { position:fixed; top:20px; left:50%; transform:translateX(-50%); text-align:center; display:none; z-index:1001; }
-#highscore { font-size:28px; color:#ff0; margin-bottom:5px; text-align:center; }
+/* --- DIFFICULTY --- */
+#difficultyMenu {
+  display:none; flex-direction:column; gap:15px;
+  position:fixed; top:50%; left:50%; transform:translate(-50%,-50%);
+  z-index:1001; text-align:center;
+}
+#difficultyMenu button {
+  font-size:28px; padding:15px 35px; display:block; margin:auto;
+}
+
+/* --- Countdown & Score --- */
+#countdown {
+  position:fixed; top:50%; left:50%;
+  transform:translate(-50%,-50%); font-size:100px; color:#d166ff;
+  text-shadow:0 0 20px #d166ff,0 0 40px #a044ff; z-index:1001; display:none;
+}
+#scoreContainer {
+  position:fixed; top:20px; left:50%;
+  transform:translateX(-50%); z-index:1001; text-align:center; display:none;
+}
+#highscore { font-size:28px; color:#ff0; margin-bottom:5px; }
 #score { font-size:36px; color:#d166ff; }
 #lives { font-size:28px; color:#f00; margin-top:5px; }
 
-/* Bubbles */
-.bubble { width:80px; height:80px; border-radius:50%; display:flex; justify-content:center; align-items:center; font-size:28px; font-weight:bold; color:#fff; background:linear-gradient(135deg,#a044ff,#6a00f4); border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset; position:absolute; cursor:pointer; }
+/* --- Bubbles --- */
+.bubble {
+  width:80px; height:80px; border-radius:50%;
+  display:flex; justify-content:center; align-items:center;
+  font-size:28px; font-weight:bold; color:#fff;
+  background:linear-gradient(135deg,#a044ff,#6a00f4);
+  border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset;
+  position:absolute; cursor:pointer;
+}
 .bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:30px; }
 .bubble.rare144 { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:30px; }
 .bubble.triple { background: linear-gradient(135deg,#f0f,#a0a); color:#fff; font-size:28px; }
@@ -38,17 +74,54 @@ button { font-family: monospace; font-weight:bold; border:none; border-radius:12
 .bubble.invert { background: linear-gradient(135deg,#fff,#000); color:#0ff; font-size:28px; }
 .bubble.instawin { background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; font-size:32px; box-shadow:0 0 30px #ff0, 0 0 60px #f00; }
 
-/* End Screen */
-#endScreen { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); display:none; flex-direction:column; justify-content:center; align-items:center; color:#fff; font-size:48px; z-index:1500; text-align:center; }
-#continueBtn { margin-top:30px; font-size:28px; padding:15px 40px; }
+/* --- Index Panel --- */
+#indexPanel {
+  position:fixed; top:100%; left:0; width:100%; max-height:70%;
+  background:rgba(10,10,10,0.95); overflow-y:auto; transition:top 0.5s ease;
+  padding:20px; z-index:999; box-shadow:0 -5px 30px #d166ff;
+}
+#indexPanel h2 { text-transform:uppercase; }
+#indexPanel .closeBtn { position:absolute; top:15px; right:15px; font-size:28px; cursor:pointer; color:#fff; font-weight:bold; z-index:1001; }
+.indexItem { display:flex; align-items:center; margin:10px 0; }
+.indexItem .bubbleImg {
+  width:60px; height:60px; margin-right:15px; border-radius:50%;
+  display:flex; justify-content:center; align-items:center; font-weight:bold;
+  color:#fff; border:2px solid #d166ff; box-shadow:0 0 15px #d166ff inset;
+  animation:float 1s infinite alternate;
+}
+.indexItem .desc { flex:1; }
+.indexItem .rarity { font-weight:bold; }
+@keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
 
-/* Pause */
+/* --- End Screen --- */
+#endScreen {
+  position:fixed; top:0; left:0; width:100%; height:100%;
+  background:rgba(0,0,0,0.9); display:none; flex-direction:column;
+  justify-content:center; align-items:center; color:#fff; font-size:48px;
+  z-index:1500; text-align:center;
+}
+#continueBtn {
+  margin-top:30px; font-size:28px; padding:15px 40px; border:none; border-radius:10px;
+  cursor:pointer; color:#fff; background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
+  box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
+}
+
+/* --- Pause --- */
 #pauseBtn { position:fixed; top:10px; right:10px; font-size:50px; color:#fff; cursor:pointer; z-index:1002; display:none; }
-#pauseScreen { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); display:none; flex-direction:column; justify-content:center; align-items:center; color:#fff; font-size:40px; z-index:2000; text-align:center; }
+#pauseScreen {
+  position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9);
+  display:none; flex-direction:column; justify-content:center; align-items:center; color:#fff; font-size:40px;
+  z-index:2000; text-align:center;
+}
 #pauseScreen button { margin:10px; font-size:28px; padding:15px 40px; }
 
-/* Easter Egg */
-#easterEgg { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); color:red; font-size:150px; font-weight:bold; display:flex; justify-content:center; align-items:center; z-index:2000; text-transform:uppercase; display:none; opacity:0; animation:fadeShake 5s forwards; }
+/* --- Easter Egg --- */
+#easterEgg {
+  position: fixed; top: 0; left:0; width:100%; height:100%;
+  background:rgba(0,0,0,0.9); color:red; font-size:150px; font-weight:bold;
+  display:flex; justify-content:center; align-items:center; z-index:2000; display:none;
+  text-transform:uppercase; opacity:0; animation:fadeShake 5s forwards;
+}
 @keyframes fadeShake {0%{opacity:0;}10%{opacity:1;transform:translateX(-5px);}20%{transform:translateX(5px);}30%{transform:translateX(-5px);}40%{transform:translateX(5px);}50%{transform:translateX(-5px);}60%{transform:translateX(5px);}70%{transform:translateX(-5px);}80%{transform:translateX(5px);}90%{transform:translateX(-5px);}100%{opacity:0;transform:translateX(0);}}
 </style>
 </head>
@@ -100,7 +173,7 @@ button { font-family: monospace; font-weight:bold; border:none; border-radius:12
 <audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
 
 <script>
-// Variables
+// --- VARIABLES ---
 const startBtn=document.getElementById('startBtn');
 const indexBtn=document.getElementById('indexBtn');
 const indexPanel=document.getElementById('indexPanel');
@@ -114,109 +187,101 @@ const highscoreEl=document.getElementById('highscore');
 const livesEl=document.getElementById('lives');
 const endScreen=document.getElementById('endScreen');
 const continueBtn=document.getElementById('continueBtn');
-const popSound=document.getElementById('popSound');
 const pauseBtn=document.getElementById('pauseBtn');
 const pauseScreen=document.getElementById('pauseScreen');
 const continueGameBtn=document.getElementById('continueGameBtn');
 const endGameBtn=document.getElementById('endGameBtn');
 const easterEl=document.getElementById('easterEgg');
+const popSound=document.getElementById('popSound');
 const loadingScreen=document.getElementById('loadingScreen');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, gamePaused=false, spawnSpeed=500, speedFactor=1, startTime;
 
-// Loading
+// --- LOADING ---
 window.addEventListener('load',()=>{
-    setTimeout(()=>{
-        loadingScreen.style.display='none';
-        startBtn.style.display='block';
-        indexBtn.style.display='block';
-    },2000);
+  setTimeout(()=>{
+    loadingScreen.style.display='none';
+    startBtn.style.display='block';
+    indexBtn.style.display='block';
+    attachButtonEvents();
+  },2000);
 });
 
-// Start & index
-startBtn.onclick=()=>{startBtn.style.display='none'; indexBtn.style.display='none'; difficultyMenu.style.display='flex';};
-backBtn.onclick=()=>{difficultyMenu.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block';};
-indexBtn.onclick=()=>{indexPanel.style.top='30%';};
-closeBtn.onclick=()=>{indexPanel.style.top='100%';};
-document.body.addEventListener('click', e=>{if(indexPanel.style.top==='30%' && e.target!==indexPanel && e.target!==indexBtn){indexPanel.style.top='100%';}});
+// --- BUTTON EVENTS ---
+function attachButtonEvents(){
+  startBtn.onclick=()=>{startBtn.style.display='none'; indexBtn.style.display='none'; difficultyMenu.style.display='flex';};
+  backBtn.onclick=()=>{difficultyMenu.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block';};
+  indexBtn.onclick=()=>{indexPanel.style.top='30%'; startBtn.style.display='none'; indexBtn.style.display='none';};
+  closeBtn.onclick=()=>{indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block';};
+  continueBtn.onclick=()=>{endScreen.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block';};
+  continueGameBtn.onclick=()=>{gamePaused=false; pauseScreen.style.display='none'; requestAnimationFrame(updateBubbles);};
+  endGameBtn.onclick=()=>{gamePaused=false; pauseScreen.style.display='none'; endGame();};
+  pauseBtn.onclick=()=>{gamePaused=true; pauseScreen.style.display='flex';};
+  window.addEventListener('blur',()=>{if(gameRunning){gamePaused=true; pauseScreen.style.display='flex';}});
+  window.addEventListener('focus',()=>{if(gameRunning && gamePaused){gamePaused=false; pauseScreen.style.display='none'; requestAnimationFrame(updateBubbles);}});
+}
 
-// Difficulty
+// --- DIFFICULTY ---
 difficultyMenu.querySelectorAll('button[data-diff]').forEach(btn=>{
-    btn.onclick=()=>{
-        const diff=btn.dataset.diff;
-        if(diff==='easy'){spawnSpeed=800; speedFactor=0.8;}
-        else if(diff==='normal'){spawnSpeed=500; speedFactor=1;}
-        else if(diff==='hard'){spawnSpeed=300; speedFactor=1.5;}
-        difficultyMenu.style.display='none';
-        startCountdown();
-    };
+  btn.onclick=()=>{
+    const diff=btn.dataset.diff;
+    if(diff==='easy'){spawnSpeed=800; speedFactor=0.8;}
+    else if(diff==='normal'){spawnSpeed=500; speedFactor=1;}
+    else if(diff==='hard'){spawnSpeed=300; speedFactor=1.5;}
+    difficultyMenu.style.display='none';
+    startCountdown();
+  };
 });
 
-// Pause
-pauseBtn.onclick=()=>{gamePaused=true; pauseScreen.style.display='flex';};
-continueGameBtn.onclick=()=>{gamePaused=false; pauseScreen.style.display='none'; requestAnimationFrame(updateBubbles);};
-endGameBtn.onclick=()=>{gamePaused=false; pauseScreen.style.display='none'; endGame();};
-window.addEventListener('blur',()=>{if(gameRunning){gamePaused=true; pauseScreen.style.display='flex';}});
-window.addEventListener('focus',()=>{if(gameRunning && gamePaused){gamePaused=false; pauseScreen.style.display='none'; requestAnimationFrame(updateBubbles);}});
-
-// Countdown & start
+// --- COUNTDOWN ---
 function startCountdown(){
-    countdownEl.style.display='block';
-    let count=3; countdownEl.textContent=count;
-    const interval=setInterval(()=>{
-        count--;
-        if(count>0) countdownEl.textContent=count;
-        else{
-            clearInterval(interval);
-            countdownEl.style.display='none';
-            scoreContainer.style.display='block';
-            pauseBtn.style.display='block';
-            startGame();
-        }
-    },1000);
+  countdownEl.style.display='block';
+  let count=3; countdownEl.textContent=count;
+  const interval=setInterval(()=>{
+    count--; if(count>0) countdownEl.textContent=count;
+    else{ clearInterval(interval); countdownEl.style.display='none'; scoreContainer.style.display='block'; pauseBtn.style.display='block'; startGame(); }
+  },1000);
 }
 
-// Game logic
+// --- GAME LOGIC ---
 function startGame(){
-    score=0;lives=3;bubbles=[];gameRunning=true;startTime=Date.now();
-    scoreEl.textContent="Score: "+score;livesEl.textContent="Lives: "+lives;
-    spawnBubble();
-    requestAnimationFrame(updateBubbles);
+  score=0;lives=3;bubbles=[];gameRunning=true;startTime=Date.now();
+  scoreEl.textContent="Score: "+score;livesEl.textContent="Lives: "+lives;
+  spawnBubble();
+  requestAnimationFrame(updateBubbles);
 }
 
-// Bubble spawn & update
 function spawnBubble(){
-    if(!gameRunning || gamePaused) return;
-    const bubble=document.createElement('div'); bubble.classList.add('bubble'); bubble.textContent='12'; bubble.dataset.type='normal';
-    const size=Math.random()*60+60; bubble.style.width=size+'px'; bubble.style.height=size+'px'; bubble.style.fontSize=size/3+'px';
-    bubble.style.left=Math.random()*(window.innerWidth-size)+'px'; bubble.style.top=(window.innerHeight-size)+'px';
-    bubble.dataset.speed=(Math.random()*1.5+1)*speedFactor;
-    document.body.appendChild(bubble);
-    bubble.addEventListener('click',()=>{if(!gameRunning) return; score++; scoreEl.textContent="Score: "+score; bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); if(score>highscore){highscore=score;highscoreEl.textContent="High Score: "+highscore;}});
-    bubbles.push(bubble);
-    setTimeout(spawnBubble, spawnSpeed);
+  if(!gameRunning || gamePaused) return;
+  const bubble=document.createElement('div'); bubble.classList.add('bubble'); bubble.textContent='12'; bubble.dataset.type='normal';
+  const size=Math.random()*60+60; bubble.style.width=size+'px'; bubble.style.height=size+'px'; bubble.style.fontSize=size/3+'px';
+  bubble.style.left=Math.random()*(window.innerWidth-size)+'px'; bubble.style.top=(window.innerHeight-size)+'px';
+  bubble.dataset.speed=(Math.random()*1.5+1)*speedFactor;
+  document.body.appendChild(bubble);
+  bubble.addEventListener('click',()=>{
+    if(!gameRunning) return; score++; scoreEl.textContent="Score: "+score; bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); if(score>highscore){highscore=score;highscoreEl.textContent="High Score: "+highscore;} popSound.currentTime=0; popSound.play();
+  });
+  bubbles.push(bubble);
+  setTimeout(spawnBubble,spawnSpeed);
 }
 
 function updateBubbles(){
-    if(!gameRunning || gamePaused) return;
-    bubbles.forEach(bubble=>{
-        const top=parseFloat(bubble.style.top);
-        bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
-        if(top<=0){lives--;livesEl.textContent="Lives: "+lives; bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); if(lives<=0) endGame();}
-    });
-    requestAnimationFrame(updateBubbles);
+  if(!gameRunning || gamePaused) return;
+  bubbles.forEach(bubble=>{
+    const top=parseFloat(bubble.style.top);
+    bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
+    if(top<=0){ lives--; livesEl.textContent="Lives: "+lives; bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); if(lives<=0) endGame();}
+  });
+  requestAnimationFrame(updateBubbles);
 }
 
 function endGame(){
-    gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
-    scoreContainer.style.display='none'; pauseBtn.style.display='none';
-    if(score===12){easterEl.textContent='12'; easterEl.style.display='flex'; setTimeout(()=>{easterEl.style.display='none'; showEndScreen();},3000);}
-    else showEndScreen();
+  gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
+  scoreContainer.style.display='none'; pauseBtn.style.display='none';
+  showEndScreen();
 }
 
 function showEndScreen(){document.getElementById('finalScoreText').textContent="Your Score: "+score; endScreen.style.display='flex';}
-continueBtn.onclick=()=>{endScreen.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block';};
-
 </script>
 </body>
 </html>
